title z-index fix

--- a/less/sweetp-menu.less
+++ b/less/sweetp-menu.less
@@ -2,6 +2,7 @@ label .title {
     position: absolute;
     top: 20px;
     left: 20px;
+    z-index: 10000;
 }
 
 label .title a::before {
@@ -13,6 +14,7 @@ label .title a::before {
     display: block;
     float: left;
     margin: 0 5px 0 0;
+    z-index: 10000;
 }
 
 label .sweetp-hamburger-menu {
